# AMR

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: battery_config.yaml  controllers.yaml  ekf_params.yaml  frontier_explorer_params.yaml  nav2_params.yaml  return_to_start_params.yaml  slam_toolbox_params.yaml
launch/: battery.launch.py  display.launch.py  ekf.launch.py  explore.launch.py  gazebo.launch.py  nav2.launch.py  return_to_start.launch.py  slam.launch.py  spawn.launch.py  teleop.launch.py
meshes/: Back_Left_Wheel.STL  Back_Right_Wheel.STL  Base_Link.STL  Front_Left_Wheel.STL  Front_Right_Wheel.STL  IMU_Link.STL  Laser.STL
rviz/: amr.rviz  slam_rviz.rviz
scripts/: battery_manager_node.py  check_controllers.py  return_to_start_node.py
urdf/: amr.urdf.xacro
worlds/: apartment.world  colored_world.sdf  empty.world  maze2.sdf  maze_world.sdf  warehouse.sdf
