<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_description</name>
  <version>0.1.0</version>
  <description>
    URDF description, Gazebo simulation, and launch files for the AMR robot.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- URDF / xacro -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- RViz + TF -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <!-- Gazebo Harmonic (gz-sim 8) -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- ros2_control stack -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_localization</depend>

  <!-- Sensor message types (for bridge) -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Launch -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
